# Maple3DMT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: adjoint_test.cpp  commemi_3d1.cpp  commemi_3d1_inversion.cpp  commemi_3d2_inversion.cpp  forward_test.cpp  gradient_check.cpp  gradient_check_fv.cpp  halfspace_1d_test.cpp  inversion_test.cpp  inversion_test_fv.cpp  mesh_preview.cpp  mesh_test.cpp  mpi_scalability_test.cpp  mpi_test.cpp  real_forward_test.cpp  real_inversion.cpp  real_inversion_octree.cpp  test_1d_layer.cpp  test_block_uniform.cpp  test_forward_fv.cpp  test_halfspace.cpp  test_octree_basic.cpp
examples/commemi_3d1a/: README.md  generate_data.cpp  run.sh
examples/commemi_3d2/: README.md  generate_data.cpp  run.sh
include/: newmt3d
include/maple3dmt/: common.h
include/maple3dmt/forward/: bicgstab.h  cocg.h  cocr.h  complex_solver.h  forward_solver.h  forward_solver_3d.h  forward_solver_fv.h  iforward_solver.h  mumps_solver_ext.h  qmr.h  ssor.h
include/maple3dmt/inversion/: implicit_jtj_fv.h  inversion.h  inversion_3d.h  inversion_fv.h  regularization_octree.h
include/maple3dmt/io/: config_reader.h  edi_io.h  hdf5_io.h  vtk_export_3d.h  vtk_export_octree.h
include/maple3dmt/mesh/: dem.h  hex_mesh_3d.h  mesh_projection.h  terrain_mesh.h
include/maple3dmt/model/: conductivity_model.h
include/maple3dmt/octree/: octree_mesh.h  operators.h  staggered_grid.h
include/maple3dmt/regularization/: regularization.h
include/maple3dmt/source/: em_source.h
include/maple3dmt/survey/: survey_line.h
include/maple3dmt/utils/: freq_parallel.h  logger.h  memory.h  memory_profiler.h
src/forward/: bicgstab.cpp  cocg.cpp  cocr.cpp  complex_solver.cpp  forward_solver_3d.cpp  forward_solver_fv.cpp  mumps_solver_ext.cpp  qmr.cpp
src/inversion/: implicit_jtj_fv.cpp  inversion_3d.cpp  inversion_fv.cpp  regularization_octree.cpp
src/io/: config_reader.cpp  edi_io.cpp  hdf5_io.cpp  vtk_export_3d.cpp  vtk_export_octree.cpp
src/mesh/: dem.cpp  hex_mesh_3d.cpp
src/model/: conductivity_model.cpp
src/octree/: octree_mesh.cpp  operators.cpp  staggered_grid.cpp
src/regularization/: regularization.cpp
src/source/: em_source.cpp
src/utils/: freq_parallel.cpp  logger.cpp
